# scod

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.txt  Makefile  README.org
.cmake/: LibPackage.cmake  config.mk
.github/workflows/: build.yml  nightly.yml
src/: scod-benchmark  scod-test
